# WaywardRT

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  WaywardRT-info.in
Benchmarks/: CMakeLists.txt
Benchmarks/src/: DotProduct.cpp  Normalize.cpp  Render.cpp
Samples/: CMakeLists.txt
Samples/src/: BlueWhite.cpp  HelloWorld.cpp  MovingSpheres.cpp  Sample.cpp  Sphere.cpp  Sphere2.cpp  Spheres.cpp  Spheres3D.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/src/: QuaternionTest.cpp  RayTest.cpp  Vec3Test.cpp
WaywardRT/: CMakeLists.txt
WaywardRT/include/WaywardRT/: BMPImage.h  BVHNode.h  BoundingBox.h  Camera.h  Color.h  Image.h  Perlin.h  Quaternion.h  Ray.h  Renderer.h  Scene.h  Timer.h  Vec3.h  log.h  scenes.h  util.h
WaywardRT/include/WaywardRT/Materials/: Dielectric.h  DiffuseLight.h  Isotropic.h  Lambertian.h  Material.h  Metal.h
WaywardRT/include/WaywardRT/Objects/: Box.h  ConstantMedium.h  Hittable.h  HittableList.h  MovingSphere.h  Rectangle.h  Rotate.h  Sphere.h  Translate.h
WaywardRT/include/WaywardRT/Renderers/: Renderer.h  Renderer3D.h  RendererBasic.h
WaywardRT/include/WaywardRT/Textures/: Camo.h  Checkered.h  ImageTexture.h  Marble.h  SolidColor.h  Texture.h
WaywardRT/src/: BMPImage.cpp  BVHNode.cpp  BoundingBox.cpp  Camera.cpp  Color.cpp  Perlin.cpp  Quaternion.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Vec3.cpp  log.cpp  scenes.cpp
WaywardRT/src/Materials/: Dielectric.cpp  DiffuseLight.cpp  Isotropic.cpp  Lambertian.cpp  Material.cpp  Metal.cpp
WaywardRT/src/Objects/: Box.cpp  ConstantMedium.cpp  Hittable.cpp  HittableList.cpp  MovingSphere.cpp  Rectangle.cpp  Rotate.cpp  Sphere.cpp  Translate.cpp
WaywardRT/src/Renderers/: Renderer.cpp  Renderer3D.cpp  RendererBasic.cpp
WaywardRT/src/Textures/: Camo.cpp  Checkered.cpp  ImageTexture.cpp  Marble.cpp  SolidColor.cpp  Texture.cpp
progress_bar/: CMakeLists.txt
progress_bar/include/progress_bar/: progress_bar.h
progress_bar/src/: progress_bar.cpp
stb/: CMakeLists.txt
stb_image_write/: CMakeLists.txt
